# KITE-Kernel-Intelligence

./: .gitignore  README.md  pyproject.toml
analysis/: make_figures.py  make_tables.py
checkpoints/kernel_grpo/: checkpoint.json  training_history.jsonl
checkpoints/sft/: checkpoint.json  sft_dataset.jsonl
configs/: hardware_h100.yaml  hierarchical.yaml  model_qwen7b_lora.yaml  project.yaml  reward_hrl.yaml  reward_kernel.yaml  slas.yaml  smoke.yaml  smoke_l40.yaml  smoke_train_l40s.yaml  sweep_alpha_beta.yaml  train_12h_l1l2_energy.yaml  train_12h_l40.yaml  train_energyaware.yaml  train_small_grpo_ipw.yaml  train_throughput.yaml  train_throughput_l40.yaml  train_throughput_l40_safe.yaml
configs/training/: m0_sft.yaml  m1_throughput.yaml  m2_energy.yaml  m3_ipw_blend.yaml  m4_runtime.yaml  (+1 more)
docs/: DESIGN.md  ENVIRONMENTS.md  EXPERIMENTS.md  GRPO_IPW_TRAINING.md  RESULTS_TEMPLATE.md  diagram_specs.md
envs/: kite-core.yml  kite-telemetry.yml  kite-train.yml
scripts/: 01_sync_sources.sh  02_build_dataset.py  03_run_sft.py  04_run_kernel_grpo.py  05_run_energy_kernel_grpo.py  06_run_runtime_ppo.py  07_run_hrl.py  08_eval_all.py  09_plot_pareto.py  README.md  build_h100_paper_artifacts.py  check_nvml_signals_l40.py  energy_profiling_experiment.py  eval_candidate.py  eval_policy.py  generate_charts.py  generate_h100_target_synthetic_results.py  input_size_scaling_experiment.py  multiturn_optimize.py  multiturn_optimize_multi_gpu.py  plot_runtime_vs_energy.py  reproduce.sh  run_baselines.py  run_check_nvml_l40.sh  run_phase_trace.py  run_smoke_l40s.sh  run_smoke_rl_online.sh  run_smoke_test.sh  run_train_12h_4gpu.sh  sbatch_12h_l1l2.sh  sbatch_energy_profile.sh  sbatch_full_experiment.sh  setup_conda_envs.sh  smoke_rl_online.py  smoke_test_one_task.py  smoke_train_l40s.py  train_rl.py
tests/: test_end_to_end_smoke.py  test_energy_reward.py  test_grpo_reward.py  test_h100_pipeline.py  test_hrl_alternating_schedule.py  test_hrl_reward.py  test_ipw_adapter.py  test_kernel_reward.py  test_kernelbench_adapter.py  test_kernelbench_adapter_eval_failures.py  test_measurement_protocol.py  test_multiturn_pass_at_k.py  test_phase_metrics.py  test_reward_no_low_energy_hack.py  test_runtime_sla_enforcement.py  test_rust_sampler.py  test_smoke_task_jsonl_schema.py
theory/: gpu_energy_fundamentals.md  kernel_energy_by_type.md  measurement_methodology.md
tools/h100-energy-sampler/: Cargo.toml
tools/h100-energy-sampler/proto/: telemetry.proto
tools/h100-energy-sampler/src/: lib.rs  main.rs  recorder.rs  sampler.rs  stream.rs
(+888 files in other folders)
