[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kite-kernel-intelligence"
version = "0.1.0"
description = "KITE: Kernel Intelligence-per-watt Tree Explorer"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "KITE Research Team" }]
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]

[project.scripts]
kite = "kite.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
