[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kite-kernel-intelligence"
version = "0.1.0"
description = "KITE: Kernel Intelligence-per-watt Tree Explorer"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "KITE Research Team" }]
license = { text = "MIT" }
dependencies = [
  "pyyaml>=6.0",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
train = [
  "torch>=2.1",
  "transformers>=4.40",
  "peft>=0.10",
  "trl>=0.9",
  "accelerate>=0.30",
  "bitsandbytes>=0.43",
  "datasets>=2.18",
]
serve = [
  "vllm>=0.4",
]
telemetry = [
  "datasets>=2.18",
]
plot = [
  "matplotlib>=3.8",
]
dev = [
  "pytest>=7.0",
]

[project.scripts]
kite = "kite.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
